2001-07-12  Donal K. Fellows  <fellowsd@cs.man.ac.uk>

	* tests/subst.test (subst-10.*): Updated tests to check new
	behaviour for 'break' in command substitutions.
	(subst-1.2,subst-7.1): Error messages changed.
	* doc/SubstObj.3: New file, to document Tcl_SubstObj.
	* doc/subst.n: Improved and updated documentation for 'subst' to
	help support the changed behaviour.
	* generic/tcl.decls (generic-437): Declaration for Tcl_SubstObj
	* generic/tcl.h (TCL_SUBST_*): Added flags for Tcl_SubstObj.
	* generic/tclCmdMZ.c (Tcl_SubstObj,Tcl_SubstObjCmd): Divided into
	two parts to allow people to access the innards of 'subst' and
	changed the behaviour when command substitutions do a 'break' to
	be different from 'continue'.  Also now works with objects, which
	allows for some nifty optimisations with variable substitutions
	and a slight improvement with command substitutions.  [TIP#36]

2001-07-10  Mo DeJong  <mdejong@redhat.com>

	* unix/Makefile.in: Add AR variable for use in STLIB_LD.
	* unix/configure: Regen.
	* unix/configure.in: Use STLIB_LD when defining MAKE_LIB
	and MAKE_STUB_LIB. Subst RANLIB and AR.
	* unix/tcl.m4 (SC_CONFIG_CFLAGS): Add doc comment about
	STLIB_LD command. Check ${AR} env var when setting
	STLIB_LD and delay evaluation until make time.
	* win/configure: Regen.
	* win/tcl.m4 (SC_CONFIG_CFLAGS): Delay evaluation of
	${AR} in STLIB_LD and add flags to better match the
	Unix implementation. Don't bother defining AR when
	using VC++ since it is not used.

2001-07-06  Mo DeJong  <mdejong@redhat.com>

	* win/configure: Regen.
	* win/tcl.m4 (SC_CONFIG_CFLAGS): Pass -e _WinMain@16 in
	addition to the -mwindows flag to work around a problem
	with ld when it incorrectly use main() as the executable
	entry point when both WinMain() and main() are available.

2001-07-06  Donal K. Fellows  <fellowsd@cs.man.ac.uk>

	* tests/cmdAH.test: Added leading zero to file modes to work
	around fault in HPUX strtol() which ignores the base parameter
	[Bug #438808]
